[gd_scene load_steps=3 format=3 uid="uid://b7sxag5rl7g2e"]

[ext_resource type="Script" uid="uid://8hrwivvoq5yh" path="res://main.gd" id="1_8y5en"]
[ext_resource type="Texture2D" uid="uid://c5pq5mto86ku0" path="res://entity.svg" id="2_mkpji"]

[node name="root" type="Node2D"]
script = ExtResource("1_8y5en")

[node name="Entity" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_mkpji")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="NextGenButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 70.0
text = "Next Generation"

[node name="GenerationLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 130.0
text = "Generation: 0"

[node name="StatsLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 130.0
offset_right = 220.0
offset_bottom = 230.0
text = "Entity Stats:
Strength: 1.00
Intelligence: 1.00
Speed: 1.00"

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 240.0
offset_right = 220.0
offset_bottom = 290.0
text = "GAME OVER!"
